fix error in technologies text

--- a/src/locales/es/projects.json
+++ b/src/locales/es/projects.json
@@ -1,5 +1,6 @@
 {
     "title": "Conoce mis proyectos", 
+    "technologies": "Tecnologias utilizadas",
     "portfolio": [
             {
                 "title": "Aplicacion de Peluqueria",
