update Footer langs and component

--- a/src/locales/en/footer.json
+++ b/src/locales/en/footer.json
@@ -1,6 +1,6 @@
 {
 	"aboutTitle": "About Me",
-	"aboutDescription": "Since 2020, I’ve been focused on Frontend development and designing user-centered interfaces. I also serve as a CTO, guiding the technical vision of the projects I’m involved in.",
+	"aboutDescription": "I'm a frontend developer with experience in interface design, web development, and technical leadership. Since 2020, I've worked on projects that combine creativity, functionality, and a strong focus on user experience. I'm passionate about turning ideas into impactful digital products using modern technologies like React, TypeScript, and UI/UX tools.",
 	"connectTitle": "Connect with me",
 	"linksTitle": "Quick Links",
 	"sections": [
