--- a/src/locales/es/footer.json
+++ b/src/locales/es/footer.json
@@ -1,6 +1,6 @@
 {
 	"aboutTitle": "Sobre Mí",
-	"aboutDescription": "Desde 2020 me dedico al desarrollo Frontend y al diseño de interfaces centradas en la experiencia del usuario. Además, desempeño el rol de CTO, guiando la visión técnica de los proyectos en los que participo.",
+	"aboutDescription": "Soy un desarrollador frontend con experiencia en diseño de interfaces, desarrollo web y liderazgo técnico. Desde 2020, he trabajado en proyectos que combinan creatividad, funcionalidad y una fuerte orientación a la experiencia del usuario. Me apasiona transformar ideas en productos digitales que generen impacto, utilizando tecnologías modernas como React, TypeScript y herramientas de UI/UX.",
 	"connectTitle": "Conecta conmigo",
 	"linksTitle": "Links de Acceso",
 	"sections": [
