fix info in langs timeline

--- a/src/locales/en/timeline.json
+++ b/src/locales/en/timeline.json
@@ -12,7 +12,7 @@
 			"date": "August 2022 — October 2023",
 			"title": "REDTIC",
 			"subtitle": "Web Developer (PHP)",
-			"description": "Led the development of custom PHP modules, managed Linux testing/production environments, and collaborated closely with the team to deliver high-quality, efficient solutions.",
+			"description": "Led the development of custom PHP modules, collaborated closely with the team to deliver high-quality, efficient solutions.",
 			"type": "work"
 		},
 		{
