--- a/src/locales/es/timeline.json
+++ b/src/locales/es/timeline.json
@@ -12,7 +12,7 @@
 			"date": "Agosto de 2022 — Octubre de 2023",
 			"title": "REDTIC",
 			"subtitle": "Desarrollador Web (PHP)",
-			"description": "Lideré el desarrollo de módulos personalizados en PHP, gestioné entornos de prueba/producción en Linux, y colaboré activamente con el equipo para entregar soluciones eficientes y de alta calidad.",
+			"description": "Lideré el desarrollo de módulos personalizados en PHP, colaboré activamente con el equipo para entregar soluciones eficientes y de alta calidad.",
 			"type": "work"
 		},
 		{
