--- a/src/locales/es/testimonials.json
+++ b/src/locales/es/testimonials.json
@@ -2,28 +2,5 @@
 	"title": "Testimonios sobre Mis Resultados",
 	"boldWords": ["Mis Resultados"],
 	"description": "Mis testimonios no son solo palabras; son el reflejo genuino de la pasión, calidad y dedicación que pongo en cada proyecto. Cada opinión compartida por mis clientes es una prueba del compromiso y el esfuerzo que entrego para superar expectativas. Ellos confiaron en mí y, con sus historias, muestran cómo mi trabajo transformó sus ideas en resultados reales. Desde soluciones creativas hasta un servicio personalizado, sus experiencias son mi mejor carta de presentación.",
-	"videoError": "Tu navegador no soporta la etiqueta de video.",
-	"reviews": [
-		{
-			"image": "images/reviews/redtic.jpg",
-			"name": "REDTIC",
-			"title": "Empresa",
-			"score": 5,
-			"review": "Trabajar con Juan Camilo ha sido una experiencia invaluable. Su enfoque en la calidad y su habilidad para entregar soluciones rápidas y efectivas son incomparables. Durante su tiempo con nosotros en REDTIC, demostró un profundo compromiso con el desarrollo de módulos y la implementación de servidores, siempre asegurándose de cumplir con los más altos estándares técnicos y prácticos"
-		},
-		{
-			"image": "images/reviews/seisk.jpg",
-			"name": "Seisk",
-			"title": "Agencia de Publicidad",
-			"score": 5,
-			"review": "En Seisk, su capacidad para gestionar bases de datos y documentar procesos de manera precisa fue clave para el éxito de nuestros proyectos. Siempre priorizó la comodidad del cliente y las necesidades de la empresa, adaptándose rápidamente a cualquier reto."
-		},
-		{
-			"image": "images/reviews/backendito.jpg",
-			"name": "Backendito Corp.",
-			"title": "Corporacion de Desarrollo",
-			"score": 5,
-			"review": "¡Excelente predisposición, comunicación clara y efectiva, trato amable y profesional con el cliente, trabajo ágil y, sobre todo, de altísima calidad! Estoy totalmente satisfecho con el servicio brindado y lo recomendaría sin dudarlo. ¡Un placer haber trabajado con un equipo tan competente y comprometido!"
-		}
-	]
+	"videoError": "Tu navegador no soporta la etiqueta de video."
 }
