update temporaly gif in services langs

--- a/src/locales/en/services.json
+++ b/src/locales/en/services.json
@@ -34,7 +34,7 @@
 		{
 			"title": "Technical Leadership & CTO",
 			"description": "Technical guidance for startups or small teams, helping define architecture, tools, workflows, and overall tech supervision.",
-			"image": "gifs/cto.gif",
+			"image": "gifs/frontend.gif",
 			"tags": [
 				"Technical Leadership",
 				"Software Architecture",
