--- a/src/locales/es/services.json
+++ b/src/locales/es/services.json
@@ -34,7 +34,7 @@
 		{
 			"title": "Liderazgo Técnico & CTO",
 			"description": "Acompañamiento técnico para startups o equipos pequeños, ayudando a definir arquitectura, herramientas, flujos de trabajo y supervisión técnica.",
-      "image": "gifs/cto.gif",
+      "image": "gifs/frontend.gif",
 			"tags": [
 				"Liderazgo Tecnico",
 				"Arquitectura de Software",
